# 2d-place

./: .gitignore  README.md  count.html
backend/: Cargo.toml  build.rs
backend/schemas/: grid.bop
backend/src/: main.rs  place.rs
bebop-example/: index.js  index.ts  package-lock.json  package.json  schemas.js  schemas.ts
frontend/: .eslintignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: app.html
frontend/src/lib/Canvas/: Canvas.svelte  ColorPicker.svelte
frontend/src/lib/schemas/: grid.bop
frontend/src/routes/: +page.svelte
