[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.17.2"
tokio = { version = "1.20.1", features = ["full"] }
futures-util = "0.3.24"
bebop = "2.4.6"
rand = "0.8.5"
local-ip-address = "0.4.9"

[build-dependencies]
bebop-tools = "2.4.6"

[features]
default = ["bebop-owned-all"]
bebop-owned-all = []